# ZUBARSKA-MITRANIC

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
resources/: resources.qrc
resources/styles/: dental.qss
src/: clinicsettings.cpp  clinicsettings.h  clinicsettingsdialog.cpp  clinicsettingsdialog.h  database.cpp  database.h  exportmanager.cpp  exportmanager.h  interventiondialog.cpp  interventiondialog.h  main.cpp  mainwindow.cpp  mainwindow.h  models.h  patientdialog.cpp  patientdialog.h  patienthistorywidget.cpp  patienthistorywidget.h  reportgenerator.cpp  reportgenerator.h  signaturewidget.cpp  signaturewidget.h  statisticswidget.cpp  statisticswidget.h
